tests/should_succeed/supported_platforms.jou
import "stdlib/io.jou"

def main() -> int:
    # Exactly one of the following should be true.
    number = (WINDOWS as int) + (LINUX as int) + (MACOS as int) + (NETBSD as int)
    printf("%d\n", number)  # Output: 1
    return 0
