tests/syntax_error/keyword_int8.jou
def main() -> int:
    int8 = 1  # Error: expected an expression, got the 'int8' keyword
    return 0
